--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ const zoneTopData = {};
             <thead>
               <tr>
                 <th>End Time (CT)</th><th>CP Load (MW)</th>
-                <th>Int. Gen</th><th>DC In</th><th>DC Out</th><th>WSL</th>
+                <th>Op. Load</th><th>DC In</th><th>DC Out</th><th>WSL</th>
               </tr>
             </thead>
             <tbody>
