--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ const filters = [
   { key: 'AE',    label: 'AECO',     type: 'pjm' },
   { key: 'AEP',   label: 'AEP',      type: 'pjm' },
   { key: 'BC',    label: 'BGE',      type: 'pjm' },
-  { key: 'COMED', label: 'COMED',    type: 'pjm' },
+  { key: 'CE', label: 'COMED',    type: 'pjm' },
   { key: 'DPL',   label: 'DPL',      type: 'pjm' },
   { key: 'PE',    label: 'PECO',     type: 'pjm' },
   { key: 'PS',    label: 'PSEG',     type: 'pjm' },
