--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         filters.filter(f => f.type==='pjm').forEach(({ key }) => {
           const rows = data.filter(r => r.zone === key);
           zoneTopData[key] = rows.map(r => {
-            const dt = new Date(r.interval_start_utc);
+            const dt = new Date(r.interval_end_utc);
             return {
               date: dt.toLocaleDateString('en-US', {
                 timeZone: 'America/New_York',
